# new-awtrix3

./: .gitignore  CMakeLists.txt  README.MD  partitions.csv  sdkconfig  sdkconfig.defaults
components/awtrix_assets/: CMakeLists.txt  awtrix_dictionary.c  awtrix_dictionary.h  awtrix_icons.c  awtrix_icons.h
components/awtrix_config/: CMakeLists.txt  awtrix_globals.cpp  awtrix_globals.h
components/awtrix_core/: CMakeLists.txt  DisplayManager.cpp  DisplayManager.h  DisplayManager_customApp.cpp  MatrixDisplayUi.cpp  MatrixDisplayUi.h  awtrix_dictionary.c  awtrix_functions.cpp  awtrix_functions.h  awtrix_games.cpp  awtrix_games.h  awtrix_icons.c  awtrix_menumanager.cpp  awtrix_menumanager.h  effects_core.cpp  effects_core.h
components/awtrix_display/: CMakeLists.txt  GifPlayer.cpp  GifPlayer.h  awtrix_font.cpp  awtrix_font.h  awtrix_font_data.inc  awtrix_icon_loader.cpp  awtrix_icon_loader.h  awtrix_menu_overlay.cpp  awtrix_menu_overlay.h  awtrix_notification_overlay.cpp  awtrix_notification_overlay.h  awtrix_notifications.cpp  awtrix_notifications.h  awtrix_overlay_registry.cpp  awtrix_overlay_registry.h  awtrix_render.cpp  awtrix_render.h  awtrix_status_overlay.cpp  awtrix_status_overlay.h  effects_core.cpp  effects_core.h  idf_component.yml  led_matrix.c  led_matrix.h  matrix_cpp.cpp  matrix_cpp.h
components/awtrix_events/: CMakeLists.txt  awtrix_events.h
components/awtrix_hal/: CMakeLists.txt  awtrix_color.h  awtrix_hal.c  awtrix_hal.h  awtrix_storage.c  awtrix_storage.h  awtrix_utils.c  awtrix_utils.h
components/awtrix_hal/boards/: ulanzi_s3.h
components/awtrix_http/: CMakeLists.txt  awtrix_api.cpp  awtrix_api.h  awtrix_edit_html.h  awtrix_http.cpp  awtrix_http.h  awtrix_routes.def  awtrix_setup_html.h
components/awtrix_kernel/: CMakeLists.txt  awtrix_apps.cpp  awtrix_apps.h  awtrix_color_utils.h  awtrix_command.h  awtrix_command_bus.cpp  awtrix_command_bus.h  awtrix_display_snapshot.cpp  awtrix_display_snapshot.h  awtrix_events.h  awtrix_placeholders.cpp  awtrix_placeholders.h  awtrix_protocol.cpp  awtrix_protocol.h  awtrix_query_snapshot.cpp  awtrix_query_snapshot.h  awtrix_system_state.cpp  awtrix_system_state.h
components/awtrix_network/: CMakeLists.txt  awtrix_artnet.cpp  awtrix_artnet.h  awtrix_mqtt.cpp  awtrix_mqtt.h  awtrix_network.cpp  awtrix_network.h  awtrix_tcp_game.cpp  awtrix_tcp_game.h
components/awtrix_periphery/: CMakeLists.txt  awtrix_dfplayer.c  awtrix_dfplayer.h  awtrix_io.c  awtrix_io.h  awtrix_periphery.cpp  awtrix_periphery.h  awtrix_power.cpp  awtrix_power.h
components/awtrix_storage/: CMakeLists.txt
docs/: THREADING.md
main/: CMakeLists.txt  app_main.cpp  idf_component.yml
tools/: http_stress.ps1  mqtt_stress.ps1
